fix text cutting off

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,8 @@ main {
 }
 
 .layers-panel {
-  width: 260px;
+  max-width: 333px;
+  min-width: 260px;
   background: var(--bs-dark-bg-subtle);
   border-left: 2px solid var(--bs-secondary-bg);
   padding: 1em 1em 1em 1em;
